# monorepo

./: README.md  pyproject.toml
libs/kabigon/: pyproject.toml
libs/kabigon/src/kabigon/: __init__.py
src/eevee/: pyproject.toml
src/eevee/src/eevee/: __init__.py
