[project]
name = "kabigon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
requires-python = ">=3.12"
dependencies = ["rich>=13.9.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.9.7"]


[project.scripts]
kabigon = "kabigon.__init__:hello"
