[project]
name = "eevee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
requires-python = ">=3.12"
dependencies = ["loguru>=0.7.3", "openai>=1.64.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.9.7"]

[project.scripts]
eevee = "eevee.__init__:hello"
